--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -53,11 +53,15 @@
       h3{
         font-size: 18px;
         font-weight: 500;
-  
-        &:first-child{
+        .oldPrice{
           color: gray;
           text-decoration: line-through;
         }
+
+ /*        &:first-child{
+          color: gray;
+          text-decoration: line-through;
+        } */
       }
     }
   }
